<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_3540" Id="{5a35d8d2-310a-4cb0-9933-f929f09572a7}">
    <Declaration><![CDATA[
VAR_GLOBAL
    // Achsen ***************************************************
	Y_Achse_steuern						: DUT_Achse_Steuern;		
	Y_Achse_status						: DUT_Achse_Status;		

    // Frequenzumrichter ****************************************
    //transport_steuern                 : DUT_SEW_FU_Steuern;
    //transport_status                  : DUT_SEW_FU_Status;

    // Ventile **************************************************
    Niederhalter          				: DUT_Ventil_sps;

    // interne Variablen ****************************************
    sk_Freigabe                         : BOOL;
    sk                                  : INT;
    transport_einfoerdern_bereit        : BOOL;
    transport_ausfoerdern_bereit        : BOOL;

    Tuer_Anwahl                         : BOOL;   // Signal Tür Anwahl, Tür soll geöffnet werden
    Tuer_Freigabe                       : BOOL;   // Signal Tür Freigabe, Tür kann geöffnet werden
END_VAR
    ]]></Declaration>
  </GVL>
</TcPlcObject>